# serializer version: 1
# name: test_get_device[device.json]
  dict({
    'audio': dict({
      'available': True,
      'volume': 100,
      'volume_limit': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'volume_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
    }),
    'bluetooth': dict({
      'active': False,
      'address': 'AA:BB:CC:DD:EE:FF',
      'available': True,
      'discoverable': True,
      'low_energy': dict({
        'active': True,
        'advertising': True,
        'connectable': True,
      }),
      'name': 'LM1234',
      'pairable': True,
    }),
    'device_id': '12345',
    'display': dict({
      'brightness': 100,
      'brightness_limit': dict({
        'range_max': 100,
        'range_min': 2,
      }),
      'brightness_mode': <BrightnessMode.AUTO: 'auto'>,
      'brightness_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'display_type': <DisplayType.MIXED: 'mixed'>,
      'height': 8,
      'on': None,
      'screensaver': dict({
        'enabled': False,
        'modes': dict({
          'screen_off': None,
          'time_based': dict({
            'enabled': True,
            'end_time': None,
            'local_end_time': None,
            'local_start_time': datetime.time(1, 0, 39),
            'start_time': datetime.time(0, 0, 39),
          }),
          'when_dark': dict({
            'enabled': False,
          }),
        }),
        'widget': '08b8eac21074f8f7e5a29f2855ba8060',
      }),
      'width': 37,
    }),
    'mode': <DeviceMode.AUTO: 'auto'>,
    'model': 'LM 37X8',
    'name': "Frenck's LaMetric",
    'os_version': '2.2.2',
    'serial_number': 'SA110405124500W00BS9',
    'update': None,
    'wifi': dict({
      'active': True,
      'available': True,
      'encryption': 'WPA',
      'ip': IPv4Address('192.168.1.11'),
      'mac': 'AA:BB:CC:DD:EE:FF',
      'mode': <WifiMode.DHCP: 'dhcp'>,
      'netmask': '255.255.255.0',
      'rssi': 21,
      'ssid': 'Frenck',
    }),
  })
# ---
# name: test_get_device[device2.json]
  dict({
    'audio': dict({
      'available': True,
      'volume': 100,
      'volume_limit': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'volume_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
    }),
    'bluetooth': dict({
      'active': False,
      'address': 'AA:BB:CC:DD:EE:FF',
      'available': True,
      'discoverable': True,
      'low_energy': dict({
        'active': True,
        'advertising': True,
        'connectable': True,
      }),
      'name': 'LM1234',
      'pairable': True,
    }),
    'device_id': '12345',
    'display': dict({
      'brightness': 100,
      'brightness_limit': dict({
        'range_max': 100,
        'range_min': 2,
      }),
      'brightness_mode': <BrightnessMode.AUTO: 'auto'>,
      'brightness_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'display_type': <DisplayType.MIXED: 'mixed'>,
      'height': 8,
      'on': None,
      'screensaver': dict({
        'enabled': False,
        'modes': dict({
          'screen_off': None,
          'time_based': dict({
            'enabled': True,
            'end_time': None,
            'local_end_time': None,
            'local_start_time': datetime.time(1, 0, 39),
            'start_time': datetime.time(0, 0, 39),
          }),
          'when_dark': dict({
            'enabled': False,
          }),
        }),
        'widget': '08b8eac21074f8f7e5a29f2855ba8060',
      }),
      'width': 37,
    }),
    'mode': <DeviceMode.SCHEDULE: 'schedule'>,
    'model': 'LM 37X8',
    'name': "Frenck's LaMetric",
    'os_version': '2.2.2',
    'serial_number': 'SA110405124500W00BS9',
    'update': None,
    'wifi': dict({
      'active': True,
      'available': True,
      'encryption': None,
      'ip': IPv4Address('192.168.1.11'),
      'mac': 'AA:BB:CC:DD:EE:FF',
      'mode': <WifiMode.DHCP: 'dhcp'>,
      'netmask': '255.255.255.0',
      'rssi': None,
      'ssid': 'Frenck',
    }),
  })
# ---
# name: test_get_device[device3.json]
  dict({
    'audio': dict({
      'available': True,
      'volume': 46,
      'volume_limit': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'volume_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
    }),
    'bluetooth': dict({
      'active': False,
      'address': '40:F4:C9:AA:AA:AA',
      'available': True,
      'discoverable': True,
      'low_energy': None,
      'name': 'LM8367',
      'pairable': False,
    }),
    'device_id': '67790',
    'display': dict({
      'brightness': 100,
      'brightness_limit': dict({
        'range_max': 100,
        'range_min': 2,
      }),
      'brightness_mode': <BrightnessMode.AUTO: 'auto'>,
      'brightness_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'display_type': <DisplayType.MIXED: 'mixed'>,
      'height': 8,
      'on': True,
      'screensaver': dict({
        'enabled': True,
        'modes': dict({
          'screen_off': None,
          'time_based': dict({
            'enabled': False,
            'end_time': None,
            'local_end_time': None,
            'local_start_time': None,
            'start_time': None,
          }),
          'when_dark': dict({
            'enabled': True,
          }),
        }),
        'widget': '1_com.lametric.clock',
      }),
      'width': 37,
    }),
    'mode': <DeviceMode.MANUAL: 'manual'>,
    'model': 'sa8',
    'name': 'TIME',
    'os_version': '3.1.3',
    'serial_number': 'SASOMETHING',
    'update': dict({
      'version': '3.2.1',
    }),
    'wifi': dict({
      'active': True,
      'available': True,
      'encryption': 'WPA',
      'ip': IPv4Address('192.168.0.33'),
      'mac': '40:F4:C9:AA:AA:AA',
      'mode': <WifiMode.DHCP: 'dhcp'>,
      'netmask': '255.255.255.0',
      'rssi': 78,
      'ssid': 'NETGEARAA',
    }),
  })
# ---
# name: test_get_device[device_lm37x8.json]
  dict({
    'audio': dict({
      'available': True,
      'volume': 46,
      'volume_limit': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'volume_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
    }),
    'bluetooth': dict({
      'active': False,
      'address': 'AA:BB:CC:DD:EE:FF',
      'available': True,
      'discoverable': True,
      'low_energy': dict({
        'active': True,
        'advertising': True,
        'connectable': True,
      }),
      'name': 'LM1234',
      'pairable': True,
    }),
    'device_id': '12345',
    'display': dict({
      'brightness': 100,
      'brightness_limit': dict({
        'range_max': 100,
        'range_min': 2,
      }),
      'brightness_mode': <BrightnessMode.AUTO: 'auto'>,
      'brightness_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'display_type': <DisplayType.MIXED: 'mixed'>,
      'height': 8,
      'on': None,
      'screensaver': dict({
        'enabled': True,
        'modes': dict({
          'screen_off': None,
          'time_based': dict({
            'enabled': False,
            'end_time': None,
            'local_end_time': None,
            'local_start_time': None,
            'start_time': None,
          }),
          'when_dark': dict({
            'enabled': True,
          }),
        }),
        'widget': '08b8eac21074f8f7e5a29f2855ba8060',
      }),
      'width': 37,
    }),
    'mode': <DeviceMode.MANUAL: 'manual'>,
    'model': 'LM 37X8',
    'name': 'Living room',
    'os_version': '2.3.9',
    'serial_number': 'SA000000000000W00BS9',
    'update': None,
    'wifi': dict({
      'active': True,
      'available': True,
      'encryption': 'WPA',
      'ip': IPv4Address('192.168.1.2'),
      'mac': 'AA:BB:CC:DD:EE:FF',
      'mode': <WifiMode.DHCP: 'dhcp'>,
      'netmask': '255.255.255.0',
      'rssi': 18,
      'ssid': 'AllYourBaseAreBelongToUs',
    }),
  })
# ---
# name: test_get_device[device_sa5.json]
  dict({
    'audio': dict({
      'available': False,
      'volume': None,
      'volume_limit': None,
      'volume_range': None,
    }),
    'bluetooth': dict({
      'active': None,
      'address': None,
      'available': False,
      'discoverable': None,
      'low_energy': None,
      'name': None,
      'pairable': None,
    }),
    'device_id': '123',
    'display': dict({
      'brightness': 8,
      'brightness_limit': dict({
        'range_max': 100,
        'range_min': 2,
      }),
      'brightness_mode': <BrightnessMode.MANUAL: 'manual'>,
      'brightness_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'display_type': <DisplayType.FULL_RGB: 'full_rgb'>,
      'height': 16,
      'on': True,
      'screensaver': None,
      'width': 16,
    }),
    'mode': <DeviceMode.MANUAL: 'manual'>,
    'model': 'sa5',
    'name': 'SKY',
    'os_version': '3.2.7',
    'serial_number': 'SA52100000000TBNC',
    'update': None,
    'wifi': dict({
      'active': True,
      'available': True,
      'encryption': 'WPA',
      'ip': IPv4Address('192.168.0.2'),
      'mac': '20:57:9E:00:00:00',
      'mode': <WifiMode.DHCP: 'dhcp'>,
      'netmask': '255.255.255.0',
      'rssi': 86,
      'ssid': '.',
    }),
  })
# ---
# name: test_get_device[device_sa5_1.json]
  dict({
    'audio': dict({
      'available': True,
      'volume': 100,
      'volume_limit': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'volume_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
    }),
    'bluetooth': dict({
      'active': True,
      'address': 'AA:BB:CC:DD:EE:FF',
      'available': True,
      'discoverable': True,
      'low_energy': dict({
        'active': True,
        'advertising': True,
        'connectable': True,
      }),
      'name': 'SKY0123',
      'pairable': False,
    }),
    'device_id': '12345',
    'display': dict({
      'brightness': 66,
      'brightness_limit': dict({
        'range_max': 100,
        'range_min': 2,
      }),
      'brightness_mode': <BrightnessMode.MANUAL: 'manual'>,
      'brightness_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'display_type': <DisplayType.MIXED: 'mixed'>,
      'height': 8,
      'on': True,
      'screensaver': dict({
        'enabled': True,
        'modes': dict({
          'screen_off': dict({
            'enabled': False,
          }),
          'time_based': dict({
            'enabled': False,
            'end_time': None,
            'local_end_time': None,
            'local_start_time': None,
            'start_time': None,
          }),
          'when_dark': None,
        }),
        'widget': '',
      }),
      'width': 64,
    }),
    'mode': <DeviceMode.MANUAL: 'manual'>,
    'model': 'sa5',
    'name': "spyfly's LaMetric SKY",
    'os_version': '3.0.13',
    'serial_number': 'SA52100000123TBNC',
    'update': dict({
      'version': '3.2.1',
    }),
    'wifi': dict({
      'active': True,
      'available': True,
      'encryption': 'WPA',
      'ip': IPv4Address('127.0.0.1'),
      'mac': 'AA:BB:CC:DD:EE:FF',
      'mode': <WifiMode.DHCP: 'dhcp'>,
      'netmask': '255.255.255.0',
      'rssi': 58,
      'ssid': 'IoT',
    }),
  })
# ---
# name: test_get_device[device_sa8.json]
  dict({
    'audio': dict({
      'available': True,
      'volume': 46,
      'volume_limit': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'volume_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
    }),
    'bluetooth': dict({
      'active': False,
      'address': 'AA:BB:CC:DD:EE:FF',
      'available': True,
      'discoverable': True,
      'low_energy': None,
      'name': 'LM1234',
      'pairable': False,
    }),
    'device_id': '12345',
    'display': dict({
      'brightness': 100,
      'brightness_limit': dict({
        'range_max': 100,
        'range_min': 2,
      }),
      'brightness_mode': <BrightnessMode.AUTO: 'auto'>,
      'brightness_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'display_type': <DisplayType.MIXED: 'mixed'>,
      'height': 8,
      'on': True,
      'screensaver': dict({
        'enabled': True,
        'modes': dict({
          'screen_off': None,
          'time_based': dict({
            'enabled': False,
            'end_time': None,
            'local_end_time': None,
            'local_start_time': None,
            'start_time': None,
          }),
          'when_dark': dict({
            'enabled': True,
          }),
        }),
        'widget': '1_com.lametric.clock',
      }),
      'width': 37,
    }),
    'mode': <DeviceMode.MANUAL: 'manual'>,
    'model': 'sa8',
    'name': 'Living room',
    'os_version': '3.2.6',
    'serial_number': 'SA000000000000W00BS9',
    'update': None,
    'wifi': dict({
      'active': True,
      'available': True,
      'encryption': 'WPA',
      'ip': IPv4Address('192.168.1.2'),
      'mac': 'AA:BB:CC:DD:EE:FF',
      'mode': <WifiMode.DHCP: 'dhcp'>,
      'netmask': '255.255.255.0',
      'rssi': 64,
      'ssid': 'AllYourBaseAreBelongToUs',
    }),
  })
# ---
# name: test_notification_queue_real[lm37x8]
  list([
    dict({
      'created': datetime.datetime(2026, 10, 3, 9, 6, 16, tzinfo=datetime.timezone.utc),
      'expiration_date': datetime.datetime(2026, 10, 3, 9, 8, 16, tzinfo=datetime.timezone.utc),
      'icon_type': None,
      'life_time': None,
      'model': dict({
        'cycles': 1,
        'frames': list([
          dict({
            'duration': 2000,
            'icon': None,
            'text': 'critical',
          }),
        ]),
        'sound': None,
      }),
      'notification_id': 12,
      'notification_type': <NotificationType.EXTERNAL: 'external'>,
      'priority': <NotificationPriority.CRITICAL: 'critical'>,
      'updated': datetime.datetime(2026, 10, 3, 9, 6, 16, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'created': datetime.datetime(2026, 10, 3, 9, 6, 16, tzinfo=datetime.timezone.utc),
      'expiration_date': datetime.datetime(2026, 10, 3, 9, 8, 16, tzinfo=datetime.timezone.utc),
      'icon_type': None,
      'life_time': None,
      'model': dict({
        'cycles': 2,
        'frames': list([
          dict({
            'data': dict({
              'current': 42,
              'end': 100,
              'start': 0,
              'unit': '%',
            }),
            'duration': None,
            'icon': 7956,
          }),
          dict({
            'data': list([
              1,
              3,
              5,
              7,
              5,
              3,
              1,
            ]),
            'duration': None,
          }),
        ]),
        'sound': None,
      }),
      'notification_id': 11,
      'notification_type': <NotificationType.EXTERNAL: 'external'>,
      'priority': <NotificationPriority.WARNING: 'warning'>,
      'updated': datetime.datetime(2026, 10, 3, 9, 6, 16, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'created': datetime.datetime(2026, 10, 3, 9, 6, 15, tzinfo=datetime.timezone.utc),
      'expiration_date': datetime.datetime(2026, 10, 3, 9, 8, 15, tzinfo=datetime.timezone.utc),
      'icon_type': None,
      'life_time': None,
      'model': dict({
        'cycles': 0,
        'frames': list([
          dict({
            'duration': None,
            'icon': None,
            'text': 'blocker',
          }),
        ]),
        'sound': None,
      }),
      'notification_id': 9,
      'notification_type': <NotificationType.EXTERNAL: 'external'>,
      'priority': <NotificationPriority.INFO: 'info'>,
      'updated': datetime.datetime(2026, 10, 3, 9, 6, 15, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'created': datetime.datetime(2026, 10, 3, 9, 6, 16, tzinfo=datetime.timezone.utc),
      'expiration_date': datetime.datetime(2026, 10, 3, 9, 7, 16, tzinfo=datetime.timezone.utc),
      'icon_type': None,
      'life_time': None,
      'model': dict({
        'cycles': 1,
        'frames': list([
          dict({
            'duration': None,
            'icon': 3219,
            'text': 'info',
          }),
        ]),
        'sound': None,
      }),
      'notification_id': 10,
      'notification_type': <NotificationType.EXTERNAL: 'external'>,
      'priority': <NotificationPriority.INFO: 'info'>,
      'updated': datetime.datetime(2026, 10, 3, 9, 6, 16, tzinfo=datetime.timezone.utc),
    }),
  ])
# ---
# name: test_notification_queue_real[sa8]
  list([
    dict({
      'created': datetime.datetime(2026, 10, 3, 9, 6, 21, tzinfo=datetime.timezone.utc),
      'expiration_date': datetime.datetime(2026, 10, 3, 9, 8, 21, tzinfo=datetime.timezone.utc),
      'icon_type': None,
      'life_time': None,
      'model': dict({
        'cycles': 1,
        'frames': list([
          dict({
            'duration': 2000,
            'icon': None,
            'text': 'critical',
          }),
        ]),
        'sound': None,
      }),
      'notification_id': 4,
      'notification_type': <NotificationType.EXTERNAL: 'external'>,
      'priority': <NotificationPriority.CRITICAL: 'critical'>,
      'updated': datetime.datetime(2026, 10, 3, 9, 6, 21, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'created': datetime.datetime(2026, 10, 3, 9, 6, 21, tzinfo=datetime.timezone.utc),
      'expiration_date': datetime.datetime(2026, 10, 3, 9, 8, 21, tzinfo=datetime.timezone.utc),
      'icon_type': None,
      'life_time': None,
      'model': dict({
        'cycles': 2,
        'frames': list([
          dict({
            'data': dict({
              'current': 42,
              'end': 100,
              'start': 0,
              'unit': '%',
            }),
            'duration': None,
            'icon': 7956,
          }),
          dict({
            'data': list([
              1,
              3,
              5,
              7,
              5,
              3,
              1,
            ]),
            'duration': None,
          }),
        ]),
        'sound': None,
      }),
      'notification_id': 3,
      'notification_type': <NotificationType.EXTERNAL: 'external'>,
      'priority': <NotificationPriority.WARNING: 'warning'>,
      'updated': datetime.datetime(2026, 10, 3, 9, 6, 21, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'created': datetime.datetime(2026, 10, 3, 9, 6, 20, tzinfo=datetime.timezone.utc),
      'expiration_date': datetime.datetime(2026, 10, 3, 9, 8, 20, tzinfo=datetime.timezone.utc),
      'icon_type': None,
      'life_time': None,
      'model': dict({
        'cycles': 0,
        'frames': list([
          dict({
            'duration': None,
            'icon': None,
            'text': 'blocker',
          }),
        ]),
        'sound': None,
      }),
      'notification_id': 1,
      'notification_type': <NotificationType.EXTERNAL: 'external'>,
      'priority': <NotificationPriority.INFO: 'info'>,
      'updated': datetime.datetime(2026, 10, 3, 9, 6, 20, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'created': datetime.datetime(2026, 10, 3, 9, 6, 21, tzinfo=datetime.timezone.utc),
      'expiration_date': datetime.datetime(2026, 10, 3, 9, 7, 21, tzinfo=datetime.timezone.utc),
      'icon_type': None,
      'life_time': None,
      'model': dict({
        'cycles': 1,
        'frames': list([
          dict({
            'duration': None,
            'icon': 3219,
            'text': 'info',
          }),
        ]),
        'sound': None,
      }),
      'notification_id': 2,
      'notification_type': <NotificationType.EXTERNAL: 'external'>,
      'priority': <NotificationPriority.INFO: 'info'>,
      'updated': datetime.datetime(2026, 10, 3, 9, 6, 21, tzinfo=datetime.timezone.utc),
    }),
  ])
# ---
